# MyFirstGit

./: README.txt  copy_library.bat
Weibo.common/: curl-7.21.1.rar
Weibo.common/include/common/: loBase64.h  loBlowFish.h  loBytebuffer.h  loCommon.h  loDirectory.h  loDllplugin.h  loFile.h  loMD5.h  loMallocAllocator.h  loMallocBase.h  loNode.h  loOSMinMax.h  loOSString.h  loOSString.inl  loParser.h  loParserT.h  loString.h  loStringT.h  loStringfwd.h  loUrlCode.h  loVersion.h  loattr.h  losecdes.h  lostrconv.h  lostring.inl  parser-template-def-char.h  parser-template-def-unichar.h  parser-template-undef.h  string-template-def-char.h  string-template-def-unichar.h  string-template-undef.h
Weibo.common/include/libhttp/: loHttp.h  loHttpDef.h
Weibo.common/include/tinyxml/: tinystr.h  tinyxml.h
Weibo.common/lib/DLL Debug/: HttpU_VC80.lib  HttpU_VC90.lib  Json_VC80.lib  Json_VC90.lib  curllib_7.21.1_VC80.lib  curllib_7.21.1_VC90.lib  libeay32_VC80.lib  libeay32_VC90.lib  ssleay32_VC80.lib  ssleay32_VC80_static.lib  ssleay32_VC90.lib  ssleay32_VC90_static.lib  tinyxml_VC80.lib  tinyxml_VC90.lib
Weibo.common/lib/DLL Release/: HttpU_VC80.lib  HttpU_VC90.lib  Json_VC80.lib  Json_VC90.lib  curllib_7.21.1_VC80.lib  curllib_7.21.1_VC90.lib  libeay32_VC80_static.lib  libeay32_VC90.lib  ssleay32_VC80_static.lib  ssleay32_VC90.lib  ssleay32_VC90_static.lib  tinyxml_VC90.lib
Weibo.common/lib/LIB Debug/: libeay32_VC80.lib  libeay32_VC90.lib  tinyxml_VC90.lib
Weibo.common/lib/LIB Release/: libeay32_VC90.lib  tinyxml_VC90.lib
Weibo.common/libhttp/trunk/: ReadMe.txt  copyfiles_h.bat  libHttp-2005.vcproj  libHttp-2008.vcproj  stdafx.h
Weibo.common/libhttp/trunk/libHttpLINUX/: Makefile.am
Weibo.common/libhttp/trunk/libHttpLINUX/.deps/: bbiconv.Po
Weibo.common/libjson/trunk/: libjson-2005.vcproj  libjson-2008.vcproj
Weibo.common/libjson/trunk/jsonLINUX/: Makefile.am
Weibo.common/win32/: Common-2005.sln  Common-2008.sln  Common-CE-2005.sln
Weibo.sdk/WBParseWrapper/: WBParseWrapper.vcproj  WBParseWrapper_VC80.vcproj  config.h  splitstr.cpp  stdafx.cpp  stdafx.h  wbParseImpl.cpp  wbParseImpl.h  wbParseMacro.h  wbParseMalloc.cpp  wbParseObj.cpp  wbParseT.hpp  wbParseWrapper.cpp  wbParser.cpp
Weibo.sdk/WBParseWrapper/Convt/: Urlcode.cpp  Urlcode.h  bbiconv.cc  strconv.cpp  strconv.h
Weibo.sdk/WBParseWrapper/include/: wbParseMalloc.h  wbParseObj.h  wbParseStruct.h  wbParseWrapper.h  wbParser.h
Weibo.sdk/WBParseWrapper/wbParserCE/: ReadMe.txt  dllmain.cpp  stdafx.h  wbParserCE.vcproj
Weibo.sdk/WeiBo SDK/: ReadMe.txt  libWeiBo_VS2005.vcproj  libWeiBo_VS2008.vcproj  stdafx.cpp
Weibo.sdk/WeiBo SDK/common/: Urlcode.cpp  Urlcode.h  strconv.cpp  strconv.h
Weibo.sdk/WeiBo SDK/libWeiboCE/: ReadMe.txt  libWeiboCE.cpp  libWeiboCE.vcproj  stdafx.cpp
Weibo.sdk/WeiBo SDK/src/: wbCheck.cpp  wbCheck.h  wbLog.h  wbOption.cpp  wbOption.h  wbRequest.cpp  wbRequest.h  wbSession.cpp  wbSession.h  wbString.cpp  wbString.h  wbURL.cpp  wbURL.h  weibo.cpp  weibo.h
Weibo.sdk/WeiBo SDK/test/: option.cpp  stdafx.h  test.cpp  test2.dsp  test_VS2005.vcproj  test_VS2008.vcproj  wbcallback.cpp  wbcallback.h  wbinit.cpp
Weibo.sdk/WeiBo SDK/test/TestLINUX/: Makefile  Makefile.am  Makefile.in
Weibo.sdk/WeiBo SDK/wbParser/: ReadMe.txt  WeiboParser_VS2005.vcproj  WeiboParser_VS2008.vcproj  stdafx.cpp  stdafx.h  wbParser.cpp  wbParser.h
Weibo.sdk/Win32/: WeiBo_VS2005.sln  WeiBo_VS2008.sln  Weibo-CE-2005.sln
(+156 files in other folders)
